Updated RAM plot
made it a line plot instead of a scatterplot

--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "e9e42490-4988-4604-abc0-3f220fa608d9",
    "metadata": {},
    "outputs": [
@@ -1221,23 +1221,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-c60563e9f45e4a8995184f5dfe14caa6.vega-embed {\n",
+       "  #altair-viz-8296f762b4f243fc98747836c707fffc.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-c60563e9f45e4a8995184f5dfe14caa6.vega-embed details,\n",
-       "  #altair-viz-c60563e9f45e4a8995184f5dfe14caa6.vega-embed details summary {\n",
+       "  #altair-viz-8296f762b4f243fc98747836c707fffc.vega-embed details,\n",
+       "  #altair-viz-8296f762b4f243fc98747836c707fffc.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-c60563e9f45e4a8995184f5dfe14caa6\"></div>\n",
+       "<div id=\"altair-viz-8296f762b4f243fc98747836c707fffc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-c60563e9f45e4a8995184f5dfe14caa6\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-c60563e9f45e4a8995184f5dfe14caa6\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8296f762b4f243fc98747836c707fffc\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8296f762b4f243fc98747836c707fffc\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1283,14 +1283,14 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-4819b1395ab5ac30200cafc9ba695988\"}, \"mark\": {\"type\": \"point\"}, \"encoding\": {\"color\": {\"field\": \"Memory_GB\", \"scale\": {\"scheme\": \"category20b\"}, \"type\": \"quantitative\"}, \"x\": {\"field\": \"Memory_GB\", \"title\": \"Installed Memory\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Average Price\", \"title\": \"Average Price of Laptops\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-4819b1395ab5ac30200cafc9ba695988\": [{\"Memory_GB\": 1, \"ScreenSize_Inches\": 13.3, \"Storage\": 256.0, \"Weight_Kg\": 1.6, \"Average Price\": 904.8542400000001}, {\"Memory_GB\": 2, \"ScreenSize_Inches\": 13.68, \"Storage\": 99.73333333333333, \"Weight_Kg\": 1.534, \"Average Price\": 237.18835200000004}, {\"Memory_GB\": 4, \"ScreenSize_Inches\": 15.058273381294963, \"Storage\": 215.53956834532374, \"Weight_Kg\": 1.9456978417266186, \"Average Price\": 521.1048406791367}, {\"Memory_GB\": 6, \"ScreenSize_Inches\": 15.641935483870967, \"Storage\": 72.93548387096774, \"Weight_Kg\": 2.4745161290322577, \"Average Price\": 566.4056209548388}, {\"Memory_GB\": 8, \"ScreenSize_Inches\": 14.935099337748346, \"Storage\": 217.56828193832598, \"Weight_Kg\": 1.9232145695364238, \"Average Price\": 1080.5285267207048}, {\"Memory_GB\": 12, \"ScreenSize_Inches\": 15.785, \"Storage\": 160.55, \"Weight_Kg\": 2.709, \"Average Price\": 1142.16607728}, {\"Memory_GB\": 16, \"ScreenSize_Inches\": 15.503597122302159, \"Storage\": 313.158273381295, \"Weight_Kg\": 2.5028057553956833, \"Average Price\": 1745.3138311942446}, {\"Memory_GB\": 24, \"ScreenSize_Inches\": 16.45, \"Storage\": 384.0, \"Weight_Kg\": 3.285, \"Average Price\": 1918.8525600000003}, {\"Memory_GB\": 32, \"ScreenSize_Inches\": 16.97142857142857, \"Storage\": 292.85714285714283, \"Weight_Kg\": 3.8578571428571427, \"Average Price\": 3057.041574514286}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-4819b1395ab5ac30200cafc9ba695988\"}, \"mark\": {\"type\": \"line\"}, \"encoding\": {\"x\": {\"field\": \"Memory_GB\", \"title\": \"Installed Memory\", \"type\": \"quantitative\"}, \"y\": {\"field\": \"Average Price\", \"title\": \"Average Price of Laptops\", \"type\": \"quantitative\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-4819b1395ab5ac30200cafc9ba695988\": [{\"Memory_GB\": 1, \"ScreenSize_Inches\": 13.3, \"Storage\": 256.0, \"Weight_Kg\": 1.6, \"Average Price\": 904.8542400000001}, {\"Memory_GB\": 2, \"ScreenSize_Inches\": 13.68, \"Storage\": 99.73333333333333, \"Weight_Kg\": 1.534, \"Average Price\": 237.18835200000004}, {\"Memory_GB\": 4, \"ScreenSize_Inches\": 15.058273381294963, \"Storage\": 215.53956834532374, \"Weight_Kg\": 1.9456978417266186, \"Average Price\": 521.1048406791367}, {\"Memory_GB\": 6, \"ScreenSize_Inches\": 15.641935483870967, \"Storage\": 72.93548387096774, \"Weight_Kg\": 2.4745161290322577, \"Average Price\": 566.4056209548388}, {\"Memory_GB\": 8, \"ScreenSize_Inches\": 14.935099337748346, \"Storage\": 217.56828193832598, \"Weight_Kg\": 1.9232145695364238, \"Average Price\": 1080.5285267207048}, {\"Memory_GB\": 12, \"ScreenSize_Inches\": 15.785, \"Storage\": 160.55, \"Weight_Kg\": 2.709, \"Average Price\": 1142.16607728}, {\"Memory_GB\": 16, \"ScreenSize_Inches\": 15.503597122302159, \"Storage\": 313.158273381295, \"Weight_Kg\": 2.5028057553956833, \"Average Price\": 1745.3138311942446}, {\"Memory_GB\": 24, \"ScreenSize_Inches\": 16.45, \"Storage\": 384.0, \"Weight_Kg\": 3.285, \"Average Price\": 1918.8525600000003}, {\"Memory_GB\": 32, \"ScreenSize_Inches\": 16.97142857142857, \"Storage\": 292.85714285714283, \"Weight_Kg\": 3.8578571428571427, \"Average Price\": 3057.041574514286}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,20 +1303,20 @@
     "        .rename(columns = {\"Price_CAD\" : \"Average Price\"})\n",
     ")\n",
     "\n",
-    "laptop_ram_plot = alt.Chart(laptop_ram_avg_price).mark_point().encode(\n",
+    "laptop_ram_plot = alt.Chart(laptop_ram_avg_price).mark_line().encode(\n",
     "    x=alt.X(\"Memory_GB\")\n",
     "        .title(\"Installed Memory\"),\n",
     "    y=alt.Y(\"Average Price\")\n",
     "        .title(\"Average Price of Laptops\"),\n",
-    "    color=alt.Color(\"Memory_GB\")\n",
-    "            .scale(scheme=\"category20b\")\n",
+    "    # color=alt.Color(\"Memory_GB\")\n",
+    "    #         .scale(scheme=\"category20b\")\n",
     ")\n",
     "laptop_ram_plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "323749e1-68c7-4483-b6cd-a69c8c6027f1",
    "metadata": {},
    "outputs": [
@@ -1325,23 +1325,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-871e39708742418d889bc8c32d7b0696.vega-embed {\n",
+       "  #altair-viz-d2c065c55d4945d480e69d381591a0a1.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-871e39708742418d889bc8c32d7b0696.vega-embed details,\n",
-       "  #altair-viz-871e39708742418d889bc8c32d7b0696.vega-embed details summary {\n",
+       "  #altair-viz-d2c065c55d4945d480e69d381591a0a1.vega-embed details,\n",
+       "  #altair-viz-d2c065c55d4945d480e69d381591a0a1.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-871e39708742418d889bc8c32d7b0696\"></div>\n",
+       "<div id=\"altair-viz-d2c065c55d4945d480e69d381591a0a1\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-871e39708742418d889bc8c32d7b0696\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-871e39708742418d889bc8c32d7b0696\");\n",
+       "    if (outputDiv.id !== \"altair-viz-d2c065c55d4945d480e69d381591a0a1\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-d2c065c55d4945d480e69d381591a0a1\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1394,7 +1394,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
