Small change to comments

--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -152,13 +152,13 @@
     "laptop_data[\"ScreenSize_Inches\"] = pd.to_numeric(laptop_data.ScreenSize_Inches, errors='coerce')\n",
     "laptop_data[\"Storage\"] = pd.to_numeric(laptop_data.Storage, errors='coerce')\n",
     "laptop_data.dtypes\n",
-    "count = laptop_data.nunique()\n",
+    "count = laptop_data.nunique()  #number of unique datapoints for each varaible\n",
     "count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "1dd7d457-db57-4cc1-9b3b-53e6426fc077",
    "metadata": {
     "tags": []
@@ -414,7 +414,7 @@
        "[1273 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
