--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "1dd7d457-db57-4cc1-9b3b-53e6426fc077",
    "metadata": {
     "tags": []
@@ -414,7 +414,7 @@
        "[1273 rows x 11 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,23 +695,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-c177c230f7e74292a9ae3262ccaf0cb0.vega-embed {\n",
+       "  #altair-viz-69d012a1ed11404fa8a6a0be96e3e053.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-c177c230f7e74292a9ae3262ccaf0cb0.vega-embed details,\n",
-       "  #altair-viz-c177c230f7e74292a9ae3262ccaf0cb0.vega-embed details summary {\n",
+       "  #altair-viz-69d012a1ed11404fa8a6a0be96e3e053.vega-embed details,\n",
+       "  #altair-viz-69d012a1ed11404fa8a6a0be96e3e053.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-c177c230f7e74292a9ae3262ccaf0cb0\"></div>\n",
+       "<div id=\"altair-viz-69d012a1ed11404fa8a6a0be96e3e053\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-c177c230f7e74292a9ae3262ccaf0cb0\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-c177c230f7e74292a9ae3262ccaf0cb0\");\n",
+       "    if (outputDiv.id !== \"altair-viz-69d012a1ed11404fa8a6a0be96e3e053\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-69d012a1ed11404fa8a6a0be96e3e053\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -801,23 +801,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-f3613d206b3242bbb2701c1cb030ec2a.vega-embed {\n",
+       "  #altair-viz-6525251a0b024210acb3f062d3a77560.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-f3613d206b3242bbb2701c1cb030ec2a.vega-embed details,\n",
-       "  #altair-viz-f3613d206b3242bbb2701c1cb030ec2a.vega-embed details summary {\n",
+       "  #altair-viz-6525251a0b024210acb3f062d3a77560.vega-embed details,\n",
+       "  #altair-viz-6525251a0b024210acb3f062d3a77560.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-f3613d206b3242bbb2701c1cb030ec2a\"></div>\n",
+       "<div id=\"altair-viz-6525251a0b024210acb3f062d3a77560\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f3613d206b3242bbb2701c1cb030ec2a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f3613d206b3242bbb2701c1cb030ec2a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-6525251a0b024210acb3f062d3a77560\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-6525251a0b024210acb3f062d3a77560\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -907,23 +907,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-1c9db0b7ec1446d0bcaa979657d4c2bc.vega-embed {\n",
+       "  #altair-viz-bdcc2be597bd46fd8a1da8421782f187.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-1c9db0b7ec1446d0bcaa979657d4c2bc.vega-embed details,\n",
-       "  #altair-viz-1c9db0b7ec1446d0bcaa979657d4c2bc.vega-embed details summary {\n",
+       "  #altair-viz-bdcc2be597bd46fd8a1da8421782f187.vega-embed details,\n",
+       "  #altair-viz-bdcc2be597bd46fd8a1da8421782f187.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-1c9db0b7ec1446d0bcaa979657d4c2bc\"></div>\n",
+       "<div id=\"altair-viz-bdcc2be597bd46fd8a1da8421782f187\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-1c9db0b7ec1446d0bcaa979657d4c2bc\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-1c9db0b7ec1446d0bcaa979657d4c2bc\");\n",
+       "    if (outputDiv.id !== \"altair-viz-bdcc2be597bd46fd8a1da8421782f187\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-bdcc2be597bd46fd8a1da8421782f187\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1013,23 +1013,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-9ae8e3d49d1443b2b244bc1e250aca5b.vega-embed {\n",
+       "  #altair-viz-9401792de5d040099261da4c73781cb2.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-9ae8e3d49d1443b2b244bc1e250aca5b.vega-embed details,\n",
-       "  #altair-viz-9ae8e3d49d1443b2b244bc1e250aca5b.vega-embed details summary {\n",
+       "  #altair-viz-9401792de5d040099261da4c73781cb2.vega-embed details,\n",
+       "  #altair-viz-9401792de5d040099261da4c73781cb2.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-9ae8e3d49d1443b2b244bc1e250aca5b\"></div>\n",
+       "<div id=\"altair-viz-9401792de5d040099261da4c73781cb2\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9ae8e3d49d1443b2b244bc1e250aca5b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9ae8e3d49d1443b2b244bc1e250aca5b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9401792de5d040099261da4c73781cb2\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9401792de5d040099261da4c73781cb2\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1117,23 +1117,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-ab75a7c83d1d4bfbab5b0baa0e8937da.vega-embed {\n",
+       "  #altair-viz-9f56c40413a14702a8483a313b1b031e.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-ab75a7c83d1d4bfbab5b0baa0e8937da.vega-embed details,\n",
-       "  #altair-viz-ab75a7c83d1d4bfbab5b0baa0e8937da.vega-embed details summary {\n",
+       "  #altair-viz-9f56c40413a14702a8483a313b1b031e.vega-embed details,\n",
+       "  #altair-viz-9f56c40413a14702a8483a313b1b031e.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-ab75a7c83d1d4bfbab5b0baa0e8937da\"></div>\n",
+       "<div id=\"altair-viz-9f56c40413a14702a8483a313b1b031e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-ab75a7c83d1d4bfbab5b0baa0e8937da\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-ab75a7c83d1d4bfbab5b0baa0e8937da\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9f56c40413a14702a8483a313b1b031e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9f56c40413a14702a8483a313b1b031e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1221,23 +1221,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-4b99f2106d2741f082166c4f3dd8fff6.vega-embed {\n",
+       "  #altair-viz-ccd73558d93048339aecf2510e1f7288.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-4b99f2106d2741f082166c4f3dd8fff6.vega-embed details,\n",
-       "  #altair-viz-4b99f2106d2741f082166c4f3dd8fff6.vega-embed details summary {\n",
+       "  #altair-viz-ccd73558d93048339aecf2510e1f7288.vega-embed details,\n",
+       "  #altair-viz-ccd73558d93048339aecf2510e1f7288.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-4b99f2106d2741f082166c4f3dd8fff6\"></div>\n",
+       "<div id=\"altair-viz-ccd73558d93048339aecf2510e1f7288\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4b99f2106d2741f082166c4f3dd8fff6\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4b99f2106d2741f082166c4f3dd8fff6\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ccd73558d93048339aecf2510e1f7288\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ccd73558d93048339aecf2510e1f7288\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1325,23 +1325,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-97ba9a74cfa64d05bb95d07c8bdaed24.vega-embed {\n",
+       "  #altair-viz-5b68ad2a7fbf49409e0ee99305effcdf.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-97ba9a74cfa64d05bb95d07c8bdaed24.vega-embed details,\n",
-       "  #altair-viz-97ba9a74cfa64d05bb95d07c8bdaed24.vega-embed details summary {\n",
+       "  #altair-viz-5b68ad2a7fbf49409e0ee99305effcdf.vega-embed details,\n",
+       "  #altair-viz-5b68ad2a7fbf49409e0ee99305effcdf.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-97ba9a74cfa64d05bb95d07c8bdaed24\"></div>\n",
+       "<div id=\"altair-viz-5b68ad2a7fbf49409e0ee99305effcdf\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-97ba9a74cfa64d05bb95d07c8bdaed24\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-97ba9a74cfa64d05bb95d07c8bdaed24\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5b68ad2a7fbf49409e0ee99305effcdf\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5b68ad2a7fbf49409e0ee99305effcdf\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1429,23 +1429,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-63fd1547c6394d66963f1f30c4cdc8eb.vega-embed {\n",
+       "  #altair-viz-c2db87bf530b46559292d9c5ff4587e4.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-63fd1547c6394d66963f1f30c4cdc8eb.vega-embed details,\n",
-       "  #altair-viz-63fd1547c6394d66963f1f30c4cdc8eb.vega-embed details summary {\n",
+       "  #altair-viz-c2db87bf530b46559292d9c5ff4587e4.vega-embed details,\n",
+       "  #altair-viz-c2db87bf530b46559292d9c5ff4587e4.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-63fd1547c6394d66963f1f30c4cdc8eb\"></div>\n",
+       "<div id=\"altair-viz-c2db87bf530b46559292d9c5ff4587e4\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-63fd1547c6394d66963f1f30c4cdc8eb\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-63fd1547c6394d66963f1f30c4cdc8eb\");\n",
+       "    if (outputDiv.id !== \"altair-viz-c2db87bf530b46559292d9c5ff4587e4\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-c2db87bf530b46559292d9c5ff4587e4\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1533,23 +1533,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-b71012af456243298c880f472d11b22c.vega-embed {\n",
+       "  #altair-viz-a73596e7ab194da58d64bda3ef36cf64.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-b71012af456243298c880f472d11b22c.vega-embed details,\n",
-       "  #altair-viz-b71012af456243298c880f472d11b22c.vega-embed details summary {\n",
+       "  #altair-viz-a73596e7ab194da58d64bda3ef36cf64.vega-embed details,\n",
+       "  #altair-viz-a73596e7ab194da58d64bda3ef36cf64.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-b71012af456243298c880f472d11b22c\"></div>\n",
+       "<div id=\"altair-viz-a73596e7ab194da58d64bda3ef36cf64\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-b71012af456243298c880f472d11b22c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-b71012af456243298c880f472d11b22c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a73596e7ab194da58d64bda3ef36cf64\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a73596e7ab194da58d64bda3ef36cf64\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1639,23 +1639,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-f065fb1c8b1f427ba5a625ba925336ef.vega-embed {\n",
+       "  #altair-viz-814a404508a64a848e152e7985650550.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-f065fb1c8b1f427ba5a625ba925336ef.vega-embed details,\n",
-       "  #altair-viz-f065fb1c8b1f427ba5a625ba925336ef.vega-embed details summary {\n",
+       "  #altair-viz-814a404508a64a848e152e7985650550.vega-embed details,\n",
+       "  #altair-viz-814a404508a64a848e152e7985650550.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-f065fb1c8b1f427ba5a625ba925336ef\"></div>\n",
+       "<div id=\"altair-viz-814a404508a64a848e152e7985650550\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f065fb1c8b1f427ba5a625ba925336ef\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f065fb1c8b1f427ba5a625ba925336ef\");\n",
+       "    if (outputDiv.id !== \"altair-viz-814a404508a64a848e152e7985650550\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-814a404508a64a848e152e7985650550\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1759,12 +1759,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad1b22cb-068d-45a6-ac71-4afe1ee27787",
+   "cell_type": "markdown",
+   "id": "875cce93-2aaf-46d4-aad2-0ed255dce15a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Github\n",
+    "\n",
+    "https://github.com/fyip3/ds_project/blob/main/code/Proposal/Proposal.ipynb"
+   ]
   }
  ],
  "metadata": {
