Added title for a Preliminary Data Analysis section
Maybe might do it maybe not. Depends on if it's necessary

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -466,6 +466,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9230e60-1a44-4044-878c-4a560fb2300f",
+   "metadata": {},
+   "source": [
+    "### Preliminary Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9826360b-d453-4a3d-bb80-c81b57db55a4",
+   "metadata": {},
+   "source": [
+    "(DESCRIPTION)\n",
+    "\n",
+    "REMOVE IF UNNECESSARY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df624ac0-cedd-4090-91c4-60fbe0eb4e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac6ada9f-cd8a-4dc0-92de-07758e5d091d",
    "metadata": {},
    "source": [
@@ -650,6 +676,14 @@
    "source": [
     "laptop_train.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f2c0ca-8c07-4dab-8760-4d80dbc4ee44",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
