Minor grammar fixes

--- a/code/Proposal/Proposal.ipynb
+++ b/code/Proposal/Proposal.ipynb
@@ -1740,7 +1740,7 @@
     "\n",
     "-> Then use cross-validate to divide the data-set into n(probably five) divisions.\n",
     "\n",
-    "-> We will RMSPE(root-mean-square-error) to score for assessing the best-fit k for our algorithm.\n",
+    "-> We will use RMSPE(root-mean-square-error) to score for assessing the best-fit k for our algorithm.\n",
     "\n",
     "\n",
     "One way we will be visualizing our results by plotting the predicted price as a line against each of our concerned variables one by one and contrasting it against the plot of actual values from the data-set."
