Added Dataframe to visualize predicted vs actual

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -1416,8 +1416,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "0aa91d3f-f199-4c24-959f-5943040dcca4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>ScreenSize_Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Memory_GB</th>\n",
+       "      <th>Storage</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <th>Price_CAD</th>\n",
+       "      <th>Predicted_CAD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>355</th>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 8550U 1.8GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>AMD Radeon 530</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>879.402384</td>\n",
+       "      <td>751.183822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Asus</td>\n",
+       "      <td>Gaming</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 7700HQ 2.8GHz</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nvidia GeForce GTX 1050 Ti</td>\n",
+       "      <td>Linux</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>859.566240</td>\n",
+       "      <td>949.648189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 7500U 2.7GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nvidia GeForce 940MX</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>672.073920</td>\n",
+       "      <td>618.799587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>LG</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 8550U 1.8GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>512.0</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>2082.342240</td>\n",
+       "      <td>1508.544103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Dell</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i7 8550U 1.8GHz</td>\n",
+       "      <td>64</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>AMD Radeon 530</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>865.000800</td>\n",
+       "      <td>2952.929109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>722</th>\n",
+       "      <td>Lenovo</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>1357.734240</td>\n",
+       "      <td>1367.285891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>635</th>\n",
+       "      <td>Asus</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7300HQ 2.5GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nvidia GeForce GTX 1050</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>821.180131</td>\n",
+       "      <td>641.278080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Lenovo</td>\n",
+       "      <td>Gaming</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>IPS Panel Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7300HQ 2.5GHz</td>\n",
+       "      <td>8</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>Nvidia GeForce GTX 1050</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>904.854240</td>\n",
+       "      <td>963.465146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>461</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Netbook</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core N3060 1.6GHz</td>\n",
+       "      <td>4</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>Intel HD Graphics 400</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>394.005600</td>\n",
+       "      <td>464.405384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1216</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>1600x900</td>\n",
+       "      <td>Intel Core i3 6006U 2GHz</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Nvidia GeForce 940MX</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>541.644480</td>\n",
+       "      <td>763.502158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>318 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Company   TypeName  ScreenSize_Inches             ScreenResolution  \\\n",
+       "355     Dell   Notebook               15.6            Full HD 1920x1080   \n",
+       "69      Asus     Gaming               17.3            Full HD 1920x1080   \n",
+       "202     Acer   Notebook               15.6            Full HD 1920x1080   \n",
+       "678       LG  Ultrabook               15.6  IPS Panel Full HD 1920x1080   \n",
+       "71      Dell  Ultrabook               13.3  IPS Panel Full HD 1920x1080   \n",
+       "...      ...        ...                ...                          ...   \n",
+       "722   Lenovo  Ultrabook               14.0  IPS Panel Full HD 1920x1080   \n",
+       "635     Asus   Notebook               15.6            Full HD 1920x1080   \n",
+       "21    Lenovo     Gaming               15.6  IPS Panel Full HD 1920x1080   \n",
+       "461     Acer    Netbook               11.6                     1366x768   \n",
+       "1216    Acer   Notebook               17.3                     1600x900   \n",
+       "\n",
+       "                                       Cpu  Memory_GB  Storage  \\\n",
+       "355             Intel Core i7 8550U 1.8GHz          8    128.0   \n",
+       "69             Intel Core i7 7700HQ 2.8GHz         12      1.0   \n",
+       "202             Intel Core i7 7500U 2.7GHz          8      1.0   \n",
+       "678             Intel Core i7 8550U 1.8GHz          8    512.0   \n",
+       "71              Intel Core i7 8550U 1.8GHz         64    256.0   \n",
+       "...                                    ...        ...      ...   \n",
+       "722             Intel Core i5 7200U 2.5GHz          8    256.0   \n",
+       "635            Intel Core i5 7300HQ 2.5GHz          8      1.0   \n",
+       "21             Intel Core i5 7300HQ 2.5GHz          8    128.0   \n",
+       "461   Intel Celeron Dual Core N3060 1.6GHz          4    128.0   \n",
+       "1216              Intel Core i3 6006U 2GHz          4      1.0   \n",
+       "\n",
+       "                             Gpu       OpSys  Weight_Kg    Price_CAD  \\\n",
+       "355               AMD Radeon 530  Windows 10       2.02   879.402384   \n",
+       "69    Nvidia GeForce GTX 1050 Ti       Linux       3.00   859.566240   \n",
+       "202         Nvidia GeForce 940MX  Windows 10       2.23   672.073920   \n",
+       "678        Intel HD Graphics 620  Windows 10       1.09  2082.342240   \n",
+       "71                AMD Radeon 530  Windows 10       1.40   865.000800   \n",
+       "...                          ...         ...        ...          ...   \n",
+       "722        Intel HD Graphics 620  Windows 10       1.32  1357.734240   \n",
+       "635      Nvidia GeForce GTX 1050  Windows 10       1.99   821.180131   \n",
+       "21       Nvidia GeForce GTX 1050  Windows 10       2.50   904.854240   \n",
+       "461        Intel HD Graphics 400  Windows 10       1.40   394.005600   \n",
+       "1216        Nvidia GeForce 940MX  Windows 10       3.30   541.644480   \n",
+       "\n",
+       "      Predicted_CAD  \n",
+       "355      751.183822  \n",
+       "69       949.648189  \n",
+       "202      618.799587  \n",
+       "678     1508.544103  \n",
+       "71      2952.929109  \n",
+       "...             ...  \n",
+       "722     1367.285891  \n",
+       "635      641.278080  \n",
+       "21       963.465146  \n",
+       "461      464.405384  \n",
+       "1216     763.502158  \n",
+       "\n",
+       "[318 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "laptop_prediction = laptop_tuned.predict(X_test)\n",
+    "\n",
+    "laptop_prediction_vs_real = laptop_test.assign(Predicted_CAD = laptop_prediction)\n",
+    "laptop_prediction_vs_real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "36b588d9-e44f-45b5-9fa0-e9c07ae23545",
    "metadata": {
     "tags": []
    },
@@ -1428,13 +1710,12 @@
        "386.2866224507617"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "laptop_prediction = laptop_tuned.predict(X_test)\n",
     "summary = mean_squared_error(laptop_prediction, y_test)**(1/2)\n",
     "\n",
     "summary"
