--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -1411,7 +1411,7 @@
    "id": "83d8e343-276b-465d-8240-c04daf3c43e6",
    "metadata": {},
    "source": [
-    "To evaluate the performance of our model in predicting unseen data, we will calculate the Root Mean Squared Percentage Error (RMSPE) on the test data. We will utilize the predict function to generate predictions on the test data using `laptop_tuned` (which automatically uses the best `k` parameter) and store the results in a variable called \"laptop_prediction\". Then, we will compute the RMSPE on the test data using the mean_squared_error function."
+    "To evaluate the performance of our model in predicting unseen data, we will calculate the Root Mean Squared Predicted Error (RMSPE) on the test data. We will utilize the predict function to generate predictions on the test data using `laptop_tuned` (which automatically uses the best `k` parameter) and store the results in a variable called \"laptop_prediction\". Then, we will compute the RMSPE on the test data using the mean_squared_error function."
    ]
   },
   {
@@ -1694,6 +1694,14 @@
     "\n",
     "laptop_prediction_vs_real = laptop_test.assign(Predicted_CAD = laptop_prediction)\n",
     "laptop_prediction_vs_real"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "224f799e-528b-4932-8fe3-836920ccabff",
+   "metadata": {},
+   "source": [
+    "Now we find the RMSPE of this prediction."
    ]
   },
   {
