added new header

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -1728,6 +1728,22 @@
     "\n",
     "summary"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c1f2e87-a608-4b79-9b91-f406dad5a561",
+   "metadata": {},
+   "source": [
+    "### Evaluating Quality of Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "949263ae-4606-49b3-8877-bde77665de71",
+   "metadata": {},
+   "source": [
+    "Insert yapping here"
+   ]
   }
  ],
  "metadata": {
