explanation for preliminary visualisation

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -642,7 +642,42 @@
    "id": "f9230e60-1a44-4044-878c-4a560fb2300f",
    "metadata": {},
    "source": [
-    "### Preliminary Data Analysis"
+    "### Preliminary Data Analysis and Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6e9c6089-0509-4a03-849d-f7bafe4b5e39",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Company               19\n",
+       "TypeName               6\n",
+       "ScreenSize_Inches     24\n",
+       "ScreenResolution      40\n",
+       "Cpu                  118\n",
+       "Memory_GB             10\n",
+       "Storage               13\n",
+       "Gpu                  110\n",
+       "OpSys                  9\n",
+       "Weight_Kg            180\n",
+       "Price_CAD            775\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = laptop_data.nunique()  #number of unique observations for each varaible\n",
+    "count"
    ]
   },
   {
@@ -650,9 +685,7 @@
    "id": "9826360b-d453-4a3d-bb80-c81b57db55a4",
    "metadata": {},
    "source": [
-    "(DESCRIPTION)\n",
-    "\n",
-    "REMOVE IF UNNECESSARY"
+    "We will now perform some visualizations to form an understanding of how the distribution of different variables(specifications of the laptop) compares to the price of each observation(laptop)"
    ]
   },
   {
