Resized some titles

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -642,7 +642,7 @@
    "id": "f9230e60-1a44-4044-878c-4a560fb2300f",
    "metadata": {},
    "source": [
-    "### Preliminary Data Analysis and Visualization"
+    "## Preliminary Data Analysis and Visualization"
    ]
   },
   {
@@ -1557,7 +1557,7 @@
    "id": "ac6ada9f-cd8a-4dc0-92de-07758e5d091d",
    "metadata": {},
    "source": [
-    "### Separation Into Train and Test Data"
+    "## Separation Into Train and Test Data"
    ]
   },
   {
@@ -2837,7 +2837,7 @@
    "id": "5c1f2e87-a608-4b79-9b91-f406dad5a561",
    "metadata": {},
    "source": [
-    "### Evaluating Quality of Model"
+    "## Evaluating Quality of Model"
    ]
   },
   {
