Completed discussion section

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -1549,7 +1549,7 @@
    "id": "438b3575-206d-412d-bec8-344ef3606d46",
    "metadata": {},
    "source": [
-    "After conducting our preliminary data analysis through visualizations, we can observe many correlations with price. Since many categorical variables have many many(50-100) unique observations, we decide on using only all the numeric columns in our data-set  to build a K-nearest-neighbours (knn) Regression algorithm model using the Sklearn module. Namely: \"ScreenSize_Inches(screen size of the laptop (inch))\", \"Memory_GB\"(Ram in laptop(GB)), \"Storage\"(Storage space of laptop (GB)) and \"Weight_Kg\"(weight of laptop(kg))"
+    "After conducting our preliminary data analysis through visualizations, we can observe many correlations with price. Since many categorical variables have many many(50-100) unique observations, we decide on using only all the numeric columns in our data-set  to build a K-nearest-neighbours (knn) Regression algorithm model using the Sklearn module. Namely: \"ScreenSize_Inches(screen size of the laptop (inch))\", \"Memory_GB\"(Ram in laptop(GB)), \"Storage\"(Storage space of laptop (GB)) and \"Weight_Kg\"(weight of laptop(kg))."
    ]
   },
   {
@@ -2917,6 +2917,25 @@
    "source": [
     "laptop_data['Price_CAD'].agg(['mean', 'median'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c43fab67-bc0f-46d5-b13e-8b223b4fbcf2",
+   "metadata": {},
+   "source": [
+    "Thus, we can conclude that we were able to reach the goal for this model as simply a metric where could use variables such as CPU speed and RAM size to predict the price of a laptop. Helping assist the users and companies by providing a price estimate for their ideal laptop, thus, reducing the time needed for research.\n",
+    "\n",
+    "\n",
+    "In the future, there could be more research into more accurate models, and evaluating whether including factors such as company name, or type of RAM/Storage the laptop is using in the model increases or decreases the efficacy of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cd23c34-8921-4e20-b45e-f3d2e28144f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
