--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -681,7 +681,7 @@
    "id": "9826360b-d453-4a3d-bb80-c81b57db55a4",
    "metadata": {},
    "source": [
-    "We will now perform some visualizations to form an understanding of how the distribution of different variables(specifications of the laptop) compares to the price of each observation(laptop)"
+    "We will now perform some visualizations to form an understanding of how the distribution of different variables (specifications of the laptop) compares to the price of each observation (laptop)"
    ]
   },
   {
@@ -1545,7 +1545,7 @@
    "id": "438b3575-206d-412d-bec8-344ef3606d46",
    "metadata": {},
    "source": [
-    "After conducting our preliminary data analysis through visualizations, we can observe many correlations with price. Since many categorical variables have many many(50-100) unique observations, we decide on using only all the numeric columns in our data-set  to build a K-nearest-neighbours (knn) Regression algorithm model using the Sklearn module. Namely: \"ScreenSize_Inches(screen size of the laptop (inch))\", \"Memory_GB\"(Ram in laptop(GB)), \"Storage\"(Storage space of laptop (GB)) and \"Weight_Kg\"(weight of laptop(kg))."
+    "After conducting our preliminary data analysis through visualizations, we can observe many correlations with price. Since many categorical variables have many many (50-100) unique observations, we decide on using only all the numeric columns in our data-set  to build a K-nearest-neighbours (knn) Regression algorithm model using the Sklearn module. Namely: \"ScreenSize_Inches\" (screen size of the laptop (inch)), \"Memory_GB\"(Ram in laptop(GB)), \"Storage\" (Storage space of laptop (GB)) and \"Weight_Kg\" (weight of laptop(kg))."
    ]
   },
   {
@@ -1924,7 +1924,7 @@
    "id": "e4065620-0ace-4a33-9957-33976119bef6",
    "metadata": {},
    "source": [
-    "We will now use a `param_grid` to test out 200 values of `k`, in order to find the most effective one to use for our model. We will employ the function `GridSearchCV`, passing the parameters `laptop_pipe`, `cv=10`, `n_jobs=-1` and once again `scoring=\"neg_root_mean_squared_error`.\n"
+    "We will now use a `param_grid` to test out 200 values of `k`, in order to find the most effective one to use for our model. We will employ the function `GridSearchCV`, passing the parameters `laptop_pipe`, `cv=10`, `n_jobs=-1` and once again `scoring=\"neg_root_mean_squared_error`."
    ]
   },
   {
