Added Works Cited

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "We will be using a dataset we found on kaggle which contains a bunch of laptop data (model, price, os, build, etc). However, this dataset is unfortunately not very clean when it comes to our needs. As such we will wrangle this data.\n",
-    "<br> Link for the original dataset: https://www.kaggle.com/datasets/ehtishamsadiq/uncleaned-laptop-price-dataset/data'\n",
+    "<br> Link for the original dataset: [Sadiq, E. (2023, February 15). Uncleaned Laptop Price Dataset. Retrieved November 2023.](https://www.kaggle.com/datasets/ehtishamsadiq/uncleaned-laptop-price-dataset/data)\n",
     "<br> (Trying to load from the original link led to a lot of headaches and hours wasted, so we copied the raw data to our Github. No alterations have been made)"
    ]
   },
@@ -2924,6 +2924,33 @@
     "\n",
     "In the future, there could be more research into more accurate models, and evaluating whether including factors such as company name, or type of RAM/Storage the laptop is using in the model increases or decreases the efficacy of the model."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3341f0d-1eea-452f-bd1c-c77b65397f26",
+   "metadata": {},
+   "source": [
+    "## Works Cited\n",
+    "\n",
+    "**Through this project, we have used code and/or ideas that are similar to that presented in the following sources:**\n",
+    "\n",
+    "  Timbers, T., Lee, M., Heagy, L., &amp; Ostblom, J. (2022). Data Science: A First Introduction (Python Edition). https://python.datasciencebook.ca/ \n",
+    " \n",
+    "  NumFOCUS, Inc. (2023, December). Pandas documentation. pandas documentation - pandas 2.1.4 documentation. https://pandas.pydata.org/docs/ \n",
+    "\n",
+    "\n",
+    "**Dataset Source:**\n",
+    "\n",
+    "  Sadiq, E. (2023, February 15). Uncleaned Laptop Price Dataset. Retrieved November 2023, https://www.kaggle.com/datasets/ehtishamsadiq/uncleaned-laptop-price-dataset. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b70921-99d6-4c08-af53-a6dda9b9d6f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
