Added stack overflow citation
Added stack overflow citation in works cited

--- a/code/Analysis/Laptop Regressive Price Model.ipynb
+++ b/code/Analysis/Laptop Regressive Price Model.ipynb
@@ -2935,12 +2935,22 @@
     "  Timbers, T., Lee, M., Heagy, L., &amp; Ostblom, J. (2022). Data Science: A First Introduction (Python Edition). https://python.datasciencebook.ca/ \n",
     " \n",
     "  NumFOCUS, Inc. (2023, December). Pandas documentation. pandas documentation - pandas 2.1.4 documentation. https://pandas.pydata.org/docs/ \n",
+    "  \n",
+    "  Mattjin, (2023, Aug). TypeError: 'UndefinedType' object is not callable. https://stackoverflow.com/a/75450069\n",
     "\n",
     "\n",
     "**Dataset Source:**\n",
     "\n",
     "  Sadiq, E. (2023, February 15). Uncleaned Laptop Price Dataset. Retrieved November 2023, https://www.kaggle.com/datasets/ehtishamsadiq/uncleaned-laptop-price-dataset. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b847fd7b-35e3-4bc9-889d-4e207d4cebf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
